# Logger

./: CMakeLists.txt  Notes  README.md
Include/: ConsoleLogPolicy.hpp  FileLogPolicy.hpp  FileWriter.hpp  ILoggerPolicy.hpp  LogLevel.hpp  LogLevelColorPolicy.hpp  Logger.hpp  RedErrorPolicy.hpp  SingleThread.hpp  ThreadSafe.hpp  ThreadSafePolicy.hpp
Source/: Logger.cpp  whattotest.cpp
Test/: LoggerTestSuite.cpp  tests.cpp
